@@ -11,7 +11,8 @@ SLIBS = -lapt-pkg
 LIB_MAKES = apt-pkg/makefile
 APT_PKG_SRC = apt_pkgmodule.cc configuration.cc generic.cc tag.cc string.cc \
               cache.cc pkgrecords.cc pkgsrcrecords.cc sourcelist.cc \
-	      depcache.cc progress.cc cdrom.cc acquire.cc pkgmanager.cc 
+	      depcache.cc progress.cc cdrom.cc acquire.cc pkgmanager.cc \
+	      indexfile.cc
 SOURCE := $(APT_PKG_SRC)	      
 include $(PYTHON_H) progress.h
 
